--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.Jelen0101'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "cn.fireflights.zy.imagetablayout"
+    //    applicationId "cn.fireflights.zy.imagetablayout"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
